// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuGroup - JSX label 1`] = `
.c3 {
  list-style-type: none;
}

.c2 {
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.25rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  color: #262D33;
}

.c1 {
  background: #FFFFFF;
  box-shadow: none;
  margin-bottom: 0.25rem;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
}

.c0 {
  padding: 0.75rem 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  font-weight: 400;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4 button,
.c4 a {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: none;
  color: inherit;
  cursor: pointer;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  font-weight: inherit;
  grid-gap: 0.5rem;
  grid-template-columns: 1fr;
  outline: none;
  padding: 0.75rem 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 button:hover,
.c4 a:hover,
.c4 button:focus,
.c4 a:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover {
  background: #F5F6F7;
  color: #262D33;
}

.c4:hover .c5 {
  color: #C1C6CC;
}

.c4 .c5 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  className="c0"
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c2"
      fontSize="small"
      fontWeight="semiBold"
    >
      <div
        className=""
      >
        Questions
      </div>
    </h2>
  </div>
  <ul
    className="c3"
    type="none"
  >
    <li
      className="c4"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        what?
      </button>
    </li>
    <li
      className="c4"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        who?
      </button>
    </li>
    <li
      className="c4"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        where?
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup - label 1`] = `
.c3 {
  list-style-type: none;
}

.c2 {
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.25rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  color: #262D33;
}

.c1 {
  background: #FFFFFF;
  box-shadow: none;
  margin-bottom: 0.25rem;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
}

.c0 {
  padding: 0.75rem 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  font-weight: 400;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4 button,
.c4 a {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: none;
  color: inherit;
  cursor: pointer;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  font-weight: inherit;
  grid-gap: 0.5rem;
  grid-template-columns: 1fr;
  outline: none;
  padding: 0.75rem 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 button:hover,
.c4 a:hover,
.c4 button:focus,
.c4 a:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover {
  background: #F5F6F7;
  color: #262D33;
}

.c4:hover .c5 {
  color: #C1C6CC;
}

.c4 .c5 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  className="c0"
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c2"
      fontSize="small"
      fontWeight="semiBold"
    >
      Questions
    </h2>
  </div>
  <ul
    className="c3"
    type="none"
  >
    <li
      className="c4"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        what?
      </button>
    </li>
    <li
      className="c4"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        who?
      </button>
    </li>
    <li
      className="c4"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        where?
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup 1`] = `
.c1 {
  list-style-type: none;
}

.c0 {
  padding: 0.75rem 0;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  font-weight: 400;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c2 button,
.c2 a {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: none;
  color: inherit;
  cursor: pointer;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  font-weight: inherit;
  grid-gap: 0.5rem;
  grid-template-columns: 1fr;
  outline: none;
  padding: 0.75rem 1rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 button:hover,
.c2 a:hover,
.c2 button:focus,
.c2 a:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover {
  background: #F5F6F7;
  color: #262D33;
}

.c2:hover .c3 {
  color: #C1C6CC;
}

.c2 .c3 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  className="c0"
>
  <ul
    className="c1"
    type="none"
  >
    <li
      className="c2"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        who!
      </button>
    </li>
  </ul>
</li>
`;
